``` ✨ feat(gotify): 更新消息格式为新结构
- 实现新的 Gotify 消息格式，包含 id、timestamp、sender 字段
- 添加 content 和 actions 数组结构，支持更丰富的消息内容
- 重构 GotifyMessageRequest 数据类以匹配新 API 规范
- 添加 MessageIdGenerator 工具类生成唯一消息 ID

✨ refactor(profile): 优化个人资料页面 UI 设计

- 采用现代化卡片设计，添加阴影和圆角效果
- 改进头像展示，增加外圈装饰和光晕效果
- 调整布局间距和颜色搭配，提升视觉层次
- 添加滚动支持防止内容溢出

🔧 chore(.gitignore): 完善项目忽略文件配置

- 添加 Android Studio、Gradle、Kotlin 相关构建文件
- 包含操作系统临时文件和 IDE 配置文件
- 添加敏感配置文件如密钥和证书的忽略规则
- 整理并分类所有忽略规则提高可维护性
```

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,126 @@
+# ===========================
+# Android Studio / IntelliJ IDEA
+# ===========================
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+.idea/
+.gradle/
 local.properties
+
+# 保留代码样式和检查配置(可选,根据团队需求决定)
+!.idea/codeStyles/
+!.idea/inspectionProfiles/
+
+# ===========================
+# Gradle 构建系统
+# ===========================
+.gradle
+/build/
+*/build/
+gradle-app.setting
+
+# Gradle Wrapper (通常应该提交,但如果团队统一使用本地 Gradle,可以忽略)
+# !gradle/wrapper/gradle-wrapper.jar
+
+# ===========================
+# Android 构建产物
+# ===========================
+/captures/
+*.apk
+*.aab
+*.ap_
+*.dex
+*.class
+
+# 签名文件 (敏感信息,绝不应提交!)
+*.jks
+*.keystore
+keystore.properties
+release.properties
+
+# ===========================
+# NDK (Native Development)
+# ===========================
+.externalNativeBuild/
+.cxx/
+obj/
+
+# ===========================
+# Kotlin
+# ===========================
+.kotlin/
+
+# ===========================
+# Compose
+# ===========================
+# Compose 编译器生成的文件通常在 build/ 目录,已被上面的规则覆盖
+
+# ===========================
+# 本地测试结果
+# ===========================
+/test-results/
+/androidTest-results/
+*.log
+
+# ===========================
+# 操作系统文件
+# ===========================
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Linux
+*~
+.directory
+
+# ===========================
+# 其他 IDE
+# ===========================
+# VS Code
+.vscode/
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# ===========================
+# 依赖分析和性能分析
+# ===========================
+/lint-report.html
+lint-results*.xml
+/profiler/
+
+# ===========================
+# Firebase (如果使用)
+# ===========================
+google-services.json
+GoogleService-Info.plist
+
+# ===========================
+# 敏感配置文件
+# ===========================
+# API 密钥配置文件
+secrets.properties
+apikey.properties
+
+# ===========================
+# 版本控制
+# ===========================
+.hg/
+.svn/
+
+# ===========================
+# 临时文件
+# ===========================
+*.swp
+*.bak
+*.tmp
+*.temp
+*~.nib
