🔧 chore(github-actions): 优化 Android 自动化构建流程
- 在 Release 构建工作流中添加 Java 版本验证步骤
- 明确指定 Gradle 构建时的 Java Home 路径，确保编译环境一致性

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -21,13 +21,16 @@ jobs:
           java-version: "17"
           cache: gradle
 
+      - name: Verify Java
+        run: java -version
+
       - name: Build release APK
         env:
           KEYSTORE_FILE: ${{ secrets.KEYSTORE_FILE }}
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-        run: ./gradlew assembleRelease
+        run: ./gradlew -Dorg.gradle.java.home=$JAVA_HOME assembleRelease
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
