--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up JDK
+        id: setup-java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
@@ -22,7 +23,12 @@ jobs:
           cache: gradle
 
       - name: Verify Java
-        run: java -version
+        run: |
+          echo "JAVA_HOME=$JAVA_HOME"
+          java -version
+
+      - name: Make gradlew executable
+        run: chmod +x gradlew
 
       - name: Build release APK
         env:
@@ -30,7 +36,9 @@ jobs:
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-        run: ./gradlew -Dorg.gradle.java.home=$JAVA_HOME assembleRelease
+        run: |
+          echo "Using JAVA_HOME=$JAVA_HOME"
+          ./gradlew assembleRelease --stacktrace
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
