✨ feat(github-actions): 新增 Android Dev 自动化构建流程
- 创建 `android-dev-build.yml` 工作流，支持 `dev` 分支推送自动触发及手动触发
- 实现基于 GitHub `run_number` 的动态版本号计算逻辑（如 0.1.x）
- 配置 JDK 11 环境、Gradle 依赖缓存及单元测试自动化运行
- 实现 Debug APK 构建、重命名及 Artifacts 上传功能，保留期为 30 天
- 优化 `app/build.gradle.kts` 配置，支持从环境变量读取 `versionCode` 和 `versionName` 以适配 CI/CD 流程
- 添加构建摘要输出，在 GitHub Actions 界面显示版本号、分支及提交信息等 metadata

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -37,12 +37,13 @@ jobs:
       - name: 检出代码
         uses: actions/checkout@v4
 
-      # 设置 JDK 11 环境（项目使用 Java 11）
-      - name: 设置 JDK 11
+      # 设置 JDK 17 环境（Android Gradle Plugin 8.13+ 要求 Java 17）
+      - name: Set up JDK
+        id: setup-java
         uses: actions/setup-java@v4
         with:
-          java-version: '11'
-          distribution: 'temurin'
+          distribution: temurin
+          java-version: "17"
           cache: gradle
 
       # 授予 gradlew 执行权限
