✨ refactor(ui): 移除 Activity 页面并优化主界面导航
- 从主界面导航菜单中移除 "Activity" 选项，简化应用结构
- 更新 `selectedNavItem` 默认值，将初始页面由 Activity 切换为 Messages
- 调整 `MainScreen` 导航逻辑及索引，确保 Messages 与 Profile 页面正确切换
- 移除不再使用的 `ActivityScreen` 相关引用和导入

🔧 chore(github-actions): 增加构建工作流权限配置

- 在 `android-release.yml` 和 `android-dev-build.yml` 中添加 `contents: write` 权限
- 确保 GitHub Actions 具备创建及更新 Release 和 Tag 的必要权限

--- a/.github/workflows/android-dev-build.yml
+++ b/.github/workflows/android-dev-build.yml
@@ -9,6 +9,10 @@ on:
   # 允许手动触发
   workflow_dispatch:
 
+# 授予 GitHub Actions 创建 Release 的权限
+permissions:
+  contents: write  # 允许创建/更新 Release 和 Tag
+
 jobs:
   build:
     name: 构建 Dev 版本
