🔧 chore(ci): 添加构建时间变量到Android工作流
- 在android-dev-build.yml中添加BUILD_TIME环境变量
- 在android-release.yml中添加BUILD_TIME环境变量
- 使用统一的构建时间显示在发布信息中

【ci】
- 修复构建时间在发布信息中的显示问题
- 确保开发和发布工作流使用相同的构建时间格式

--- a/.github/workflows/android-dev-build.yml
+++ b/.github/workflows/android-dev-build.yml
@@ -50,10 +50,13 @@ jobs:
           COMMIT_COUNT=$(git rev-list --count HEAD)
           VERSION_NAME="0.1.${COMMIT_COUNT}"
           VERSION_CODE=${COMMIT_COUNT}
+          BUILD_TIME=$(date -u '+%Y-%m-%d %H:%M:%S UTC')
           echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
           echo "VERSION_CODE=$VERSION_CODE" >> $GITHUB_ENV
+          echo "BUILD_TIME=$BUILD_TIME" >> $GITHUB_ENV
           echo "📦 Dev 版本号: $VERSION_NAME (versionCode: $VERSION_CODE)"
           echo "📊 基于 Git 提交总数: $COMMIT_COUNT"
+          echo "🕐 构建时间: $BUILD_TIME"
 
       # 运行单元测试
       - name: Run tests
@@ -96,7 +99,7 @@ jobs:
             **版本代码**: `${{ env.VERSION_CODE }}`
             **构建分支**: `dev`
             **提交 SHA**: `${{ github.sha }}`
-            **构建时间**: `$(date -u '+%Y-%m-%d %H:%M:%S UTC')`
+            **构建时间**: `${{ env.BUILD_TIME }}`
 
             ---
 
