--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -58,10 +58,13 @@ jobs:
           COMMIT_COUNT=$(git rev-list --count HEAD)
           VERSION_NAME="0.1.${COMMIT_COUNT}"
           VERSION_CODE=${COMMIT_COUNT}
+          BUILD_TIME=$(date -u '+%Y-%m-%d %H:%M:%S UTC')
           echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
           echo "VERSION_CODE=$VERSION_CODE" >> $GITHUB_ENV
+          echo "BUILD_TIME=$BUILD_TIME" >> $GITHUB_ENV
           echo "📦 Release 版本号: $VERSION_NAME (versionCode: $VERSION_CODE)"
           echo "📊 基于 Git 提交总数: $COMMIT_COUNT"
+          echo "🕐 构建时间: $BUILD_TIME"
 
       # 缓存 Gradle 依赖（加速构建）
       - name: Cache Gradle packages
@@ -119,7 +122,7 @@ jobs:
             **版本代码**: `${{ env.VERSION_CODE }}`
             **构建分支**: `main`
             **提交 SHA**: `${{ github.sha }}`
-            **构建时间**: `$(date -u '+%Y-%m-%d %H:%M:%S UTC')`
+            **构建时间**: `${{ env.BUILD_TIME }}`
 
             ---
 
