--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -30,6 +30,8 @@ jobs:
       # 检出代码
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # 获取完整的 Git 历史，用于准确计算提交总数
 
       # 设置 JDK 17
       - name: Set up JDK
