✨ feat(login): 添加二维码登录功能
- 集成 CameraX 和 ML Kit 实现二维码扫描
- 添加 QrCodeLoginForm 和 QrCodeScannerView 组件
- 扩展 LoginMode 枚举支持 QR_CODE 模式
- 实现二维码数据验证和登录逻辑
- 添加相机权限请求和错误处理
- 配置相机和二维码扫描相关依赖
- 添加中英文国际化字符串资源
- 创建二维码登录测试数据生成脚本

【docs】添加二维码登录实现总结和测试指南文档

- 详细记录实现过程和技术要点
- 提供完整的测试用例和验证步骤
- 包含性能优化和安全验证说明

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,11 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- 通知权限：Android 13+ 需要此权限才能显示通知 -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <!-- 相机权限：用于二维码扫描 -->
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <!-- 相机硬件特性声明（非必需，允许在没有相机的设备上安装） -->
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
 
     <application
         android:allowBackup="true"
