🔧 chore(config): 添加 git remote 命令到 Claude 安全命令列表
- 在 .claude 设置中添加 "Bash(git remote:*)" 安全命令模式

⚡️ perf(workflow): 优化 Android 发布工作流增加固定下载链接

- 创建固定文件名 droplink-release.apk 用于永久下载链接
- 更新 GitHub Release 描述包含固定下载链接和版本号链接
- 同时上传两个版本的 APK 文件以支持不同使用场景

🐛 fix(workflow): 修复 APK 上传和发布配置

- 更新 artifact 上传路径配置以包含多个 APK 文件
- 修正 release 文件路径配置确保所有版本都能正确发布

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -100,15 +100,20 @@ jobs:
       - name: Rename APK
         run: |
           mkdir -p output
+          # 创建固定文件名的 APK（用于永久下载链接）
+          cp app/build/outputs/apk/release/app-release.apk output/droplink-release.apk
+          # 创建带版本号的 APK（用于归档）
           cp app/build/outputs/apk/release/app-release.apk output/droplink-release-${{ env.VERSION_NAME }}.apk
-          echo "✅ APK 已重命名为: droplink-release-${{ env.VERSION_NAME }}.apk"
+          echo "✅ APK 已重命名为: droplink-release.apk 和 droplink-release-${{ env.VERSION_NAME }}.apk"
 
       # 上传 APK 到 Artifacts
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: droplink-release-${{ env.VERSION_NAME }}
-          path: output/droplink-release-${{ env.VERSION_NAME }}.apk
+          path: |
+            output/droplink-release.apk
+            output/droplink-release-${{ env.VERSION_NAME }}.apk
           retention-days: 90
 
       # 自动发布到 GitHub Release (覆盖式发布 main-latest)
@@ -133,14 +138,21 @@ jobs:
             - 每次 main 分支更新时，此 Release 会被**自动覆盖**
             - 如需测试最新功能，请访问 [Dev 开发版 Release](../../releases/tag/dev-latest)
 
-            ### 🔗 固定下载链接（永久有效）
+            ### 🔗 固定下载链接（永久有效，用于二维码）
+            ```
+            https://github.com/${{ github.repository }}/releases/download/main-latest/droplink-release.apk
+            ```
+
+            ### 📥 带版本号的下载链接
             ```
             https://github.com/${{ github.repository }}/releases/download/main-latest/droplink-release-${{ env.VERSION_NAME }}.apk
             ```
 
             ### 📝 最近提交
             ${{ github.event.head_commit.message }}
-          files: output/droplink-release-${{ env.VERSION_NAME }}.apk
+          files: |
+            output/droplink-release.apk
+            output/droplink-release-${{ env.VERSION_NAME }}.apk
           draft: false
           prerelease: false  # 标记为正式版本
         env:
