🔧 chore(version): 优化版本号管理机制
- 【android-dev-build.yml】从 version.properties 文件读取主版本号并自动计算次版本号
- 【android-dev-build.yml】dev 版本格式调整为 0.1.x-dev，基于分支提交数计算版本
- 【android-release.yml】release 版本从 version.properties 读取主版本号，正式版格式为 0.1.0
- 【version.properties】新增版本配置文件，统一管理主版本号便于手动维护

--- a/.github/workflows/android-dev-build.yml
+++ b/.github/workflows/android-dev-build.yml
@@ -44,20 +44,27 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x gradlew
 
-      # 设置版本号（基于 Git 提交总数，确保 dev 和 main 版本号一致）
+      # 设置版本号（从 version.properties 读取主版本号 + 自动计算次版本号）
       - name: 设置版本号
         id: version
         run: |
-          # 使用 Git 提交总数作为版本号基准
-          COMMIT_COUNT=$(git rev-list --count HEAD)
-          VERSION_NAME="0.1.${COMMIT_COUNT}"
-          VERSION_CODE=${COMMIT_COUNT}
+          # 从 version.properties 读取主版本号（如 0.1）
+          MAJOR_MINOR=$(grep "MAJOR_MINOR=" version.properties | cut -d'=' -f2)
+
+          # 计算当前分支自上次合并到 main 后的提交数作为次版本号
+          # 如果无法计算，则使用提交总数
+          PATCH_COUNT=$(git rev-list --count HEAD ^origin/main 2>/dev/null || git rev-list --count HEAD)
+
+          # Dev 版本格式: 0.1.3-dev
+          VERSION_NAME="${MAJOR_MINOR}.${PATCH_COUNT}-dev"
+          VERSION_CODE=$(git rev-list --count HEAD)
           BUILD_TIME=$(date -u '+%Y-%m-%d %H:%M:%S UTC')
+
           echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
           echo "VERSION_CODE=$VERSION_CODE" >> $GITHUB_ENV
           echo "BUILD_TIME=$BUILD_TIME" >> $GITHUB_ENV
           echo "📦 Dev 版本号: $VERSION_NAME (versionCode: $VERSION_CODE)"
-          echo "📊 基于 Git 提交总数: $COMMIT_COUNT"
+          echo "📊 主版本: $MAJOR_MINOR, 次版本: $PATCH_COUNT"
           echo "🕐 构建时间: $BUILD_TIME"
 
       # 运行单元测试
