--- a/.github/workflows/android-dev-build.yml
+++ b/.github/workflows/android-dev-build.yml
@@ -48,8 +48,8 @@ jobs:
       - name: 设置版本号
         id: version
         run: |
-          # 从 version.properties 读取主版本号（如 0.1）
-          MAJOR_MINOR=$(grep "MAJOR_MINOR=" version.properties | cut -d'=' -f2)
+          # 从 version.properties 读取主版本号（如 0.1），去除空格和换行符
+          MAJOR_MINOR=$(grep "MAJOR_MINOR=" version.properties | cut -d'=' -f2 | tr -d '[:space:]')
 
           # 计算当前分支自上次合并到 main 后的提交数作为次版本号
           # 如果无法计算，则使用提交总数
@@ -60,12 +60,12 @@ jobs:
           VERSION_CODE=$(git rev-list --count HEAD)
           BUILD_TIME=$(date -u '+%Y-%m-%d %H:%M:%S UTC')
 
-          echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
-          echo "VERSION_CODE=$VERSION_CODE" >> $GITHUB_ENV
-          echo "BUILD_TIME=$BUILD_TIME" >> $GITHUB_ENV
-          echo "📦 Dev 版本号: $VERSION_NAME (versionCode: $VERSION_CODE)"
-          echo "📊 主版本: $MAJOR_MINOR, 次版本: $PATCH_COUNT"
-          echo "🕐 构建时间: $BUILD_TIME"
+          echo "VERSION_NAME=${VERSION_NAME}" >> $GITHUB_ENV
+          echo "VERSION_CODE=${VERSION_CODE}" >> $GITHUB_ENV
+          echo "BUILD_TIME=${BUILD_TIME}" >> $GITHUB_ENV
+          echo "📦 Dev 版本号: ${VERSION_NAME} (versionCode: ${VERSION_CODE})"
+          echo "📊 主版本: ${MAJOR_MINOR}, 次版本: ${PATCH_COUNT}"
+          echo "🕐 构建时间: ${BUILD_TIME}"
 
       # 运行单元测试
       - name: Run tests
