--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -56,20 +56,20 @@ jobs:
       - name: 设置版本号
         id: version
         run: |
-          # 从 version.properties 读取主版本号（如 0.1）
-          MAJOR_MINOR=$(grep "MAJOR_MINOR=" version.properties | cut -d'=' -f2)
+          # 从 version.properties 读取主版本号（如 0.1），去除空格和换行符
+          MAJOR_MINOR=$(grep "MAJOR_MINOR=" version.properties | cut -d'=' -f2 | tr -d '[:space:]')
 
           # Main 正式版格式: 0.1.0（不带 -dev 后缀）
           VERSION_NAME="${MAJOR_MINOR}.0"
           VERSION_CODE=$(git rev-list --count HEAD)
           BUILD_TIME=$(date -u '+%Y-%m-%d %H:%M:%S UTC')
 
-          echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
-          echo "VERSION_CODE=$VERSION_CODE" >> $GITHUB_ENV
-          echo "BUILD_TIME=$BUILD_TIME" >> $GITHUB_ENV
-          echo "📦 Release 版本号: $VERSION_NAME (versionCode: $VERSION_CODE)"
-          echo "📊 主版本: $MAJOR_MINOR"
-          echo "🕐 构建时间: $BUILD_TIME"
+          echo "VERSION_NAME=${VERSION_NAME}" >> $GITHUB_ENV
+          echo "VERSION_CODE=${VERSION_CODE}" >> $GITHUB_ENV
+          echo "BUILD_TIME=${BUILD_TIME}" >> $GITHUB_ENV
+          echo "📦 Release 版本号: ${VERSION_NAME} (versionCode: ${VERSION_CODE})"
+          echo "📊 主版本: ${MAJOR_MINOR}"
+          echo "🕐 构建时间: ${BUILD_TIME}"
 
       # 缓存 Gradle 依赖（加速构建）
       - name: Cache Gradle packages
