--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -56,8 +56,8 @@ jobs:
       - name: 设置版本号
         id: version
         run: |
-          # 从 version.properties 读取主版本号（如 0.1），去除空格和换行符
-          MAJOR_MINOR=$(grep "MAJOR_MINOR=" version.properties | cut -d'=' -f2 | tr -d '[:space:]')
+          # 从 version.properties 读取主版本号（如 0.1），排除注释行，去除空格和换行符
+          MAJOR_MINOR=$(grep "^MAJOR_MINOR=" version.properties | cut -d'=' -f2 | tr -d '[:space:]')
 
           # Main 正式版格式: 0.1.0（不带 -dev 后缀）
           VERSION_NAME="${MAJOR_MINOR}.0"
