--- a/.github/workflows/android-dev-build.yml
+++ b/.github/workflows/android-dev-build.yml
@@ -104,13 +104,18 @@ jobs:
             output/droplink-dev-${{ env.VERSION_NAME }}.apk
           retention-days: 30
 
+      # 删除旧的 dev-latest tag（如果存在）
+      - name: Delete old dev-latest tag
+        run: |
+          git push origin :refs/tags/dev-latest || true
+        continue-on-error: true
+
       # 自动发布到 GitHub Release (覆盖式发布 dev-latest)
       - name: Create or Update Dev Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: dev-latest
           name: "🚀 Dev 开发版 (最新)"
-          make_latest: false  # 不标记为最新正式版
           target_commitish: ${{ github.sha }}  # 强制 tag 指向当前提交
           body: |
             ## 📦 Droplink Dev 开发版 - 自动构建
