chore(project): 移除 Claude Code 配置和技能数据
- 删除整个 .claude 目录及其所有子文件
- 在 .gitignore 中添加 .claude/ 忽略规则
- 清理项目中与 Claude AI 助手相关的所有配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,8 @@ apikey.properties
 
 # 签名配置信息文件（敏感信息）
 SIGNING_CONFIG.txt
+
+# ===========================
+# Claude Code AI 助手配置
+# ===========================
+.claude/
