--- a/.github/workflows/android-dev-build.yml
+++ b/.github/workflows/android-dev-build.yml
@@ -90,18 +90,14 @@ jobs:
           mkdir -p output
           # 创建固定文件名的 APK（用于永久下载链接）
           cp app/build/outputs/apk/debug/app-debug.apk output/droplink-dev.apk
-          # 创建带版本号的 APK（用于归档）
-          cp app/build/outputs/apk/debug/app-debug.apk output/droplink-dev-${{ env.VERSION_NAME }}.apk
-          echo "✅ APK 已重命名为: droplink-dev.apk 和 droplink-dev-${{ env.VERSION_NAME }}.apk"
+          echo "✅ APK 已重命名为: droplink-dev.apk"
 
       # 上传 APK
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: droplink-dev-${{ env.VERSION_NAME }}
-          path: |
-            output/droplink-dev.apk
-            output/droplink-dev-${{ env.VERSION_NAME }}.apk
+          path: output/droplink-dev.apk
           retention-days: 30
 
       # 删除旧的 dev-latest tag（如果存在）
@@ -138,16 +134,9 @@ jobs:
             https://github.com/${{ github.repository }}/releases/download/dev-latest/droplink-dev.apk
             ```
 
-            ### 📥 带版本号的下载链接
-            ```
-            https://github.com/${{ github.repository }}/releases/download/dev-latest/droplink-dev-${{ env.VERSION_NAME }}.apk
-            ```
-
             ### 📝 最近提交
             ${{ github.event.head_commit.message }}
-          files: |
-            output/droplink-dev.apk
-            output/droplink-dev-${{ env.VERSION_NAME }}.apk
+          files: output/droplink-dev.apk
           draft: false
           prerelease: true  # 标记为预发布版本
         env:
