🔧 chore(ci): 优化 Android 版本号生成策略
- 【android-dev-build.yml】修改开发版版本号计算方式：使用 dev 分支总提交数替代分支合并后提交数，确保 main 分支可以继承相同版本号
- 【android-release.yml】修改正式版版本号计算方式：继承 dev 分支版本号格式并移除 -dev 后缀，统一版本管理策略
- 【android-release.yml】增加版本信息输出：显示次版本号便于调试和追踪
- 【android-release.yml】重构发布流程：自动创建版本标签并生成永久归档 Release，完善下载说明文档

🌐 i18n(android-release.yml): 更新英文注释内容

- 【android-release.yml】翻译版本号设置注释为中文：提升代码可读性
- 【android-release.yml】翻译构建日志输出为中文：统一国际化标准

--- a/.github/workflows/android-dev-build.yml
+++ b/.github/workflows/android-dev-build.yml
@@ -51,9 +51,8 @@ jobs:
           # 从 version.properties 读取主版本号（如 0.1），排除注释行，去除空格和换行符
           MAJOR_MINOR=$(grep "^MAJOR_MINOR=" version.properties | cut -d'=' -f2 | tr -d '[:space:]')
 
-          # 计算当前分支自上次合并到 main 后的提交数作为次版本号
-          # 如果无法计算，则使用提交总数
-          PATCH_COUNT=$(git rev-list --count HEAD ^origin/main 2>/dev/null || git rev-list --count HEAD)
+          # 使用 dev 分支的总提交数作为次版本号（确保 main 可以继承相同的版本号）
+          PATCH_COUNT=$(git rev-list --count HEAD)
 
           # Dev 版本格式: 0.1.3-dev
           VERSION_NAME="${MAJOR_MINOR}.${PATCH_COUNT}-dev"
