--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -52,15 +52,18 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x gradlew
 
-      # 设置版本号（从 version.properties 读取主版本号，正式版不带后缀）
+      # 设置版本号（从 version.properties 读取主版本号，继承 dev 的版本号但去掉 -dev 后缀）
       - name: 设置版本号
         id: version
         run: |
           # 从 version.properties 读取主版本号（如 0.1），排除注释行，去除空格和换行符
           MAJOR_MINOR=$(grep "^MAJOR_MINOR=" version.properties | cut -d'=' -f2 | tr -d '[:space:]')
 
-          # Main 正式版格式: 0.1.0（不带 -dev 后缀）
-          VERSION_NAME="${MAJOR_MINOR}.0"
+          # 使用提交总数作为次版本号（与 dev 分支保持一致的计算方式）
+          PATCH_COUNT=$(git rev-list --count HEAD)
+
+          # Main 正式版格式: 0.1.26（不带 -dev 后缀，继承 dev 的版本号）
+          VERSION_NAME="${MAJOR_MINOR}.${PATCH_COUNT}"
           VERSION_CODE=$(git rev-list --count HEAD)
           BUILD_TIME=$(date -u '+%Y-%m-%d %H:%M:%S UTC')
 
@@ -68,7 +71,7 @@ jobs:
           echo "VERSION_CODE=${VERSION_CODE}" >> $GITHUB_ENV
           echo "BUILD_TIME=${BUILD_TIME}" >> $GITHUB_ENV
           echo "📦 Release 版本号: ${VERSION_NAME} (versionCode: ${VERSION_CODE})"
-          echo "📊 主版本: ${MAJOR_MINOR}"
+          echo "📊 主版本: ${MAJOR_MINOR}, 次版本: ${PATCH_COUNT}"
           echo "🕐 构建时间: ${BUILD_TIME}"
 
       # 缓存 Gradle 依赖（加速构建）
@@ -157,13 +160,45 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # 创建版本化 Release（仅当推送 tag 时，如 v1.0.0）
-      - name: Create Versioned GitHub Release
-        if: startsWith(github.ref, 'refs/tags/')
+      # 自动创建版本标签（用于归档历史版本）
+      - name: Create Version Tag
+        run: |
+          VERSION_TAG="v${{ env.VERSION_NAME }}"
+          echo "📌 创建版本标签: ${VERSION_TAG}"
+
+          # 删除旧的同名标签（如果存在）
+          git push origin :refs/tags/${VERSION_TAG} || true
+
+          # 创建新标签并推送
+          git tag ${VERSION_TAG}
+          git push origin ${VERSION_TAG}
+        continue-on-error: false
+
+      # 为版本标签创建永久 Release（用于历史归档）
+      - name: Create Versioned Release
         uses: softprops/action-gh-release@v1
         with:
-          files: output/droplink-release-${{ env.VERSION_NAME }}.apk
-          generate_release_notes: true
+          tag_name: v${{ env.VERSION_NAME }}
+          name: "📦 Droplink v${{ env.VERSION_NAME }}"
+          body: |
+            ## 📦 Droplink 正式版 v${{ env.VERSION_NAME }}
+
+            **版本号**: `${{ env.VERSION_NAME }}`
+            **版本代码**: `${{ env.VERSION_CODE }}`
+            **构建分支**: `main`
+            **提交 SHA**: `${{ github.sha }}`
+            **构建时间**: `${{ env.BUILD_TIME }}`
+
+            ---
+
+            ### 📥 下载说明
+            - 这是**历史归档版本**，用于追溯和回退
+            - 如需最新稳定版本，请访问 [正式版 Release](../../releases/tag/main-latest)
+            - 如需测试最新功能，请访问 [Dev 开发版 Release](../../releases/tag/dev-latest)
+
+            ### 📝 最近提交
+            ${{ github.event.head_commit.message }}
+          files: output/droplink-release.apk
           draft: false
           prerelease: false
         env:
