🐛 fix(ci): 修复 Release APK 下载链接失效问题
移除工作流中删除 tag 的步骤，避免 Release 和 APK 文件被删除。
softprops/action-gh-release 本身支持覆盖已存在的 Release，
使用 target_commitish 确保 tag 指向最新提交即可。

修改内容：
- 移除 android-release.yml 中删除 main-latest tag 的步骤
- 移除 android-dev-build.yml 中删除 dev-latest tag 的步骤
- 添加注释说明无需手动删除 tag

影响：
- 修复了从 dev 合并到 main 时 APK 下载链接失效的问题
- Release 更新时 APK 文件会被原地替换，下载链接永久有效

--- a/.github/workflows/android-dev-build.yml
+++ b/.github/workflows/android-dev-build.yml
@@ -99,13 +99,8 @@ jobs:
           path: output/droplink-dev.apk
           retention-days: 30
 
-      # 删除旧的 dev-latest tag（如果存在）
-      - name: Delete old dev-latest tag
-        run: |
-          git push origin :refs/tags/dev-latest || true
-        continue-on-error: true
-
       # 自动发布到 GitHub Release (覆盖式发布 dev-latest)
+      # 注意：softprops/action-gh-release 会自动覆盖已存在的 Release，无需手动删除 tag
       - name: Create or Update Dev Release
         uses: softprops/action-gh-release@v1
         with:
